# chess_ai

./: .claudiaideconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  EBO.cpp  EBO.h  README.md  VAO.cpp  VAO.h  VBO.cpp  VBO.h  board.cpp  board.h  chess_ai.cpp  chess_ai.h  game.cpp  game.h  main.cpp  piece.cpp  piece.h  premake5.lua  shader.cpp  shader.h  square.cpp  square.h  triangle.cpp  triangle.h  util.h  vcpkg.json  window.cpp  window.h
res/shaders/: default.frag  default.vert  piece.frag  piece.vert
src/: AIPlayer.cpp  EBO.cpp  EBO.h  HumanPlayer.cpp  Player.cpp  Player.h  Texture.cpp  Texture.h  VAO.h  board.cpp  board.h  game.cpp  game.h  main.cpp  piece.cpp  piece.h  shader.h  square.cpp  square.h  util.cpp  util.h
